ChangeLog for TDB
=================

==== 0.8.2

==== 0.8.1

+ Fix bug when assembling one unnamed graph. 

==== 0.8.0

** The on-disk file format has changed : datasets must be reloaded **

+ TDBFactory now caches datatsets as they are created.  
  Opening a dataset anywhere in the same JVM will return the same dataset.
  Closing this dataset immediately releases resources and closes the dataset
  everywhere in the JVM.   
  
+ A named graph of <urn:x-arq:UnionGraph>  is the RDF merge of all named graphs in a dataset.
  This is now supported as a graph name when accessing one graph in a dataset via the
  programmtic API calls.  Update directly to the  union graph is not allowed; update of
  any named graph wil be immediately visible in the union graph.
  
+ A named graph of <urn:x-arq:DefaultGraph> is the same as the unnamed graph in a dataset. 

+ Upgrade to Java5 version of ARQ and Jena

+ Copes with spaces in URIs (strongly not recommended)

+ Internal general purpose (non-RDF) library code all moved under package "atlas"

+ Faster Turtle reader (combined underpinning with N-Triples bulkreader).  

==== 0.7.3

+ Execution logging now catches all execution paths

+ Metadata files attached to database files.  
  New files will appear in the database directory.

+ "tdbtest" renamed "tdbverify".  New "tdbtest" runs an individual test 
   manifest (similar to ARQ and SDB). 

Bug fixes:

- Query over the union of named graphs only works in simple cases.  
  Now works for any pattern. 

- Stats optimizer: failed to gracefully handle abbreviated patterns with TERM

==== 0.7.2

Bug fixes:

- The comand line tools did not work with a location and a named graph.

- removeAll(s,p,o) added.  Improve Model.removeAll()

- Bug fixes to B+tree indexing on deletion. 

==== 0.7.1

Bug fixes:

- Dataset.containsNamedModel on a TDB-backed data store always returns false.
  Now returns true if there are any triples in that graph.
  
- removeAll could cause an exception.