@@ -12,13 +12,6 @@ public class Dev
     // Is/was this a bug in ARQ?  Is it fixed?
     
     // == 0.8.2
-    // Dev-1:
-    // Share graphs ==> same graph?
-    //   Via shared datasets
-    //   Old routes: TDBFactory. _createGraph() ; FactoryGraphTDB
-    // Downplay FactoryGraphTDB
-    // Make graph creation just dataset+selection.
-    // TDBFactory.Impl is only dataset.
     
     // NodeTable as ( Index<Node, NodeID>, Index<NodeId, Node> )
     
