@@ -10,6 +10,7 @@ import static com.hp.hpl.jena.sparql.util.graph.GraphUtils.exactlyOneProperty;
 import static com.hp.hpl.jena.sparql.util.graph.GraphUtils.getAsStringValue;
 import static com.hp.hpl.jena.tdb.assembler.VocabTDB.pDescription;
 import static com.hp.hpl.jena.tdb.assembler.VocabTDB.pFile;
+
 import atlas.lib.ColumnMap;
 
 import com.hp.hpl.jena.rdf.model.Resource;
